[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assate/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Object/Bullet/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Object/Bullet/Trail.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 3 )

[node name="Bullet" type="RigidBody2D"]
collision_layer = 0
collision_mask = 513
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 6, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 6, 0 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 1 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 6, 0 )
shape = SubResource( 2 )

[node name="Trail" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
